ajuste de nav del index

--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Historia</title>
     <link rel="shortcut icon" href="../img/escudo 1.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+   
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <header>
@@ -41,7 +43,7 @@
         </p>
         <img src="../img/historia-1.jpg" alt="historia-1">
         <img src="../img/historia-2.jpg" alt="historia-2">
-        <img src="../img/historia-3.jpg" alt=historia-3">
+        <img src="../img/historia-3.jpg" alt="historia-3">
     <p>El primer escudo del Madrid Foot-ball Club tuvo un diseño muy simple. Consistió en entrelazar las tres iniciales del club, es decir, la “M”, la “F” y la “C”, que iban en fondo oscuro azul, sobre la camiseta blanca. Pero a su vez, el reglamento establecía que para partidos con conjuntos de otras sociedades, el equipo debía llevar el escudo de la ciudad de Madrid en el lado izquierdo del pecho, reemplazando al escudo del club.
         La primera variante data de 1908. Las letras entrelazadas adoptaron una forma más estilizada y aparecieron inscritas en un círculo. El siguiente cambio en la configuración del escudo no se dio hasta 1920, año en el que el rey Alfonso XIII concedió al club el título de Real. Por esta razón se le añadió la Corona Real, las iniciales se vieron estilizadas otro tanto, y el club pasó a denominarse Real Madrid Foot ball Club. A su vez, para los partidos oficiales, se adoptó el escudo de la ciudad junto con la corona borbónica.
         </p>
@@ -80,6 +82,8 @@
  <div  class="footer__2"> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6072.034734756565!2d-3.692238563739062!3d40.45275257576471!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4228e23705d39f%3A0xa8fff6d26e2b1988!2sEstadio%20Santiago%20Bernab%C3%A9u!5e0!3m2!1ses!2sar!4v1672270156939!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
  </footer>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+        
 </body>
 </html>
  
