menu nav a todas las secciones

--- a/pages/Unete.html
+++ b/pages/Unete.html
@@ -19,17 +19,39 @@
              <h1>Real Madrid Fan Page</h1>
          </div>
          <div>
-             <nav class="navegacion">
-                 <ul>
-                     <li><a href="Historia.html"> Historia</li></a>
-                     <li> <a href="Fotos-y-videos.html"> Fotos y videos</a></li>
-                     <li><a href="Noticias.html">Noticias</a>
-                         </li>
-                     <li><a href="Proximos-juegos.html"> Próximos juegos</a>
-                        </li>
-                     <li>Únete</li>
-                 </ul>
-             </nav>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                 <a class="navbar-brand" href="../index.html">Home</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button> 
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="Historia.html">Historia</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="Fotos-y-videos.html">Fotos y videos</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="Noticias.html">Noticias</a>
+                          </li>
+                         
+                      <li class="nav-item">
+                        <a class="nav-link" href="Proximos-juegos.html">Próximos juegos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page">Únete</a>
+                      </li>
+                    </ul>
+                        
+                    <form class="d-flex" role="search">
+                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                  </div>
+                </div>
+            </nav>
          </div>
          </header>
 
