terminado mobile first index

--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -56,7 +56,7 @@
 </header>
 <body>
     <h2>Inicios del club</h2>
-   <section class="actualidad">
+   <section class="historia">
     <p>
         El Real Madrid Club de Fútbol es un club polideportivo de la ciudad de Madrid, España. Fundado el 6 de marzo de 1902 como Sociedad Madrid Foot-Ball Club, en su rama futbolística - que juega en la Primera División de España - fue denominado por la FIFA el Mejor Club del Siglo XX. Tuvo varias secciones deportivas además del fúbol y el baloncesto como ajedrez, atletismo, balonmano, béisbol, boxeo, gimnasia, lucha, natación, pelota, rugby, tenis, tenis de mesa y voleibol, pero las exigencias deportivas hicieron que el club madridista tuviera que renunciar a algunas de estas disciplinas para dedicar más esfuerzos al fútbol o el baloncesto.
         </p>
@@ -69,11 +69,12 @@
     <img src="../img/historia-4.jpg" alt="historia-4">
     <img src="../img/historia-5.jpg" alt="historia-5">
     <p>Es uno de los clubes de fútbol con más seguidores del planeta, además de tener más de 85.000 socios, y uno de los más laureados, entre sus palmareses tiene a nivel doméstico treinta y cinco campeonatos de liga, diecisiete copas del Rey y ocho supercopas - haciéndolo el conjunto más ganador de su país - y a nivel internacional catorce UEFA Champions League, dos copas de la UEFA, tres supercopas europea y tres copas Intercontinentales. En su sección de baloncesto es el club con más títulos nacionales de España y más campeonatos internacionales de Europa. Fue un miembro fundador del ya desaparecido G-14, grupo al cual pertenecían los clubes más importantes de Europa.</p>
-    <div class="video__historia1">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/QvJoCy-0XCs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+    <div class="video__historia1 container">
+    <iframe width="410" height="350" src="https://www.youtube.com/embed/QvJoCy-0XCs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div> 
     <h3>Palmarés de Títulos</h3>
     <img src="../img/palmares-1.png" alt="">
+  </div>
 </section>
    
         
