finalizado etapas entrega 2 mobile first-grid

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <body>
   <div><h2>Actualidad</h2></div> 
-    <section class="container actualidad">
+    <section class="actualidad container">
        
       <div><img src="img/entrenamiento-1.jpg" alt="entrenamiento-equipo">
         <p>El Real Madrid completó el segundo entrenamiento de la semana para preparar el regreso a la competición, en el que se medirá al Valladolid en el José Zorrilla (viernes, 21:30 h). Los jugadores comenzaron ejercitándose en el gimnasio mientras los porteros realizaban trabajo específico sobre el césped de la Ciudad Real Madrid. Posteriormente, el equipo se dividió en dos grupos y combinó rondós y trabajo táctico con balón. A continuación, realizaron ejercicios de presión, ataque y defensa</p>
@@ -293,7 +293,7 @@
 
            <h2 class="footer__h2">Donde encontrarnos</h2>
             <div class="footer__1">
-            <a href="https://www.twitter.com/realmadrid"> 
+            <a class="footer__imgtw" href="https://www.twitter.com/realmadrid"> 
             <img src="img/logo-tw.png" alt="logo-tw">
             </a>
         
