--- a/pages/Noticias.html
+++ b/pages/Noticias.html
@@ -57,7 +57,7 @@
     
 
     <h3>Noticias</h3>
-    <section class="noticias">
+    <section class="noticias container">
     <h4>Benzema se ganó el Golden Globe Soccer del 2022</h4>
     <p>El delantero lideró al Real Madrid campeón de Champions, Liga, Supercopa de Europa y Supercopa de España.
         Karim Benzema recibió un nuevo reconocimiento a su espectacular 2022 en los Premios Globe Soccer, donde ha sido elegido mejor jugador del año. El capitán del Real Madrid, ganador del Balón de Oro y del Premio al Jugador del Año de la UEFA, lideró al equipo en la conquista de la Decimocuarta, la 35ª Liga, la 12ª Supercopa de España y la 5ª Supercopa de Europa.
@@ -82,7 +82,7 @@
 
         <h2 class="footer__h2">Donde encontrarnos</h2>
          <div class="footer__1">
-         <a href="https://www.twitter.com/realmadrid"> 
+         <a class="footer__imgtw" href="https://www.twitter.com/realmadrid"> 
          <img src="../img/logo-tw.png" alt="logo-tw">
          </a>
      
