--- a/pages/Unete.html
+++ b/pages/Unete.html
@@ -98,7 +98,7 @@
 
         <h2 class="footer__h2">Donde encontrarnos</h2>
          <div class="footer__1">
-         <a href="https://www.twitter.com/realmadrid"> 
+         <a class="footer__imgtw" href="https://www.twitter.com/realmadrid"> 
          <img src="../img/logo-tw.png" alt="logo-tw">
          </a>
      
