cambios fotos y videos

--- a/pages/Fotos-y-videos.html
+++ b/pages/Fotos-y-videos.html
@@ -81,8 +81,9 @@
     <h2 class="fotos__h2">Estadio Santiago Bernabeu y su Futuro</h2>
     
 <section class="fotos__2 container">
-        
+  <div>    
     <img src="../img/fotos-6.jpg" alt="">
+  </div>
   <div class="video__youtube1 container">
     <iframe width="300" height="250" src="https://www.youtube.com/embed/aBIpPXIFBCs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
