ajuste de footer y creacion de variables

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Home-Real Madrid Fan Page</title>
     <link rel="shortcut icon" href="img/escudo 1.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -292,13 +292,13 @@
           </div>
         </section>
    
-        <footer>
+        <footer class="footer-general">
 
            <h2 class="footer__h2">Donde encontrarnos</h2>
             <div class="footer__1">
-            <a class="footer__imgtw" href="https://www.twitter.com/realmadrid"> 
+           <span class="footer__imgtw"> <a href="https://www.twitter.com/realmadrid"> 
             <img src="img/logo-tw.png" alt="logo-tw">
-            </a>
+            </a></span>
         
             <span class="footer__imgfb"><a href="https://www.facebook.com/realmadrid.html">
                 <img src="img/logo-fb.png" alt="logo-fb">
