--- a/pages/Proximos-juegos.html
+++ b/pages/Proximos-juegos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proximos y juegos</title>
+    <title>Proximos y juegos- Real Madrid Fan Page</title>
     <link rel="shortcut icon" href="../img/escudo 1.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -68,7 +68,7 @@
          <p>Esperando rival de Octavos de final</p>
         </section>
        
-         <footer>
+         <footer class="footer-general">
 
             <h2 class="footer__h2">Donde encontrarnos</h2>
              <div class="footer__1">
