--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home-Real Madrid Fan Page</title>
+    <meta name="keywords" content="home, homepage, futbol, realmadrid, club, noticias, madridista, liga, uefa, champions, jugadores">
+    <meta name="description" content="Bienvenidos a la mejor página para fanaticos del real madrid, acá encontrarás noticias, fotos, videos e informacion mas reciente del equipo">
     <link rel="shortcut icon" href="img/escudo 1.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&family=Kanit:ital@0;1&family=Montserrat&family=Nunito:ital,wght@1,300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
+    <title>Home-Real Madrid Fan Page</title>
 </head>
 <header>
     <div class="header">
@@ -59,7 +61,7 @@
 
 <body>
   <div><h2>Actualidad</h2></div> 
-    <section class="actualidad container">
+    <main class="actualidad container">
        
       <div><img src="img/entrenamiento-1.jpg" alt="entrenamiento-equipo">
         <p>El Real Madrid completó el segundo entrenamiento de la semana para preparar el regreso a la competición, en el que se medirá al Valladolid en el José Zorrilla (viernes, 21:30 h). Los jugadores comenzaron ejercitándose en el gimnasio mientras los porteros realizaban trabajo específico sobre el césped de la Ciudad Real Madrid. Posteriormente, el equipo se dividió en dos grupos y combinó rondós y trabajo táctico con balón. A continuación, realizaron ejercicios de presión, ataque y defensa</p>
@@ -77,7 +79,7 @@
       Este galardón reconoce los logros conseguidos entre el 8 de agosto de 2021 y el 18 de diciembre de 2022. En ese periodo, los tres madridistas han sido cruciales para ganar la Champions League, la Supercopa de Europa, la Liga y la Supercopa de España
       </p> 
       </div> 
-    </section>
+    </main>
     
     <section class="jugadores">
         <h2>Jugadores del primer equipo</h2>
