--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Historia-Real Madrid Fan Page</title>
+    <meta name="keywords" content="historia, club, realmadrid, fundacion, titulos, madridista, bernabeu, futbol, uefa, champions">
+    <meta name="description" content=" la maravillosa historia de como se fundó y se formó el mejor club del mundo">
     <link rel="shortcut icon" href="../img/escudo 1.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,6 +13,7 @@
    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
+    <title>Historia-Real Madrid Fan Page</title>
 </head>
 <header>
    <div class="header"> <a href="../index.html">
@@ -59,7 +61,7 @@
 </header>
 <body>
     <h2>Inicios del club</h2>
-   <section class="historia container">
+   <main class="historia container">
     <p>
         El Real Madrid Club de Fútbol es un club polideportivo de la ciudad de Madrid, España. Fundado el 6 de marzo de 1902 como Sociedad Madrid Foot-Ball Club, en su rama futbolística - que juega en la Primera División de España - fue denominado por la FIFA el Mejor Club del Siglo XX. Tuvo varias secciones deportivas además del fúbol y el baloncesto como ajedrez, atletismo, balonmano, béisbol, boxeo, gimnasia, lucha, natación, pelota, rugby, tenis, tenis de mesa y voleibol, pero las exigencias deportivas hicieron que el club madridista tuviera que renunciar a algunas de estas disciplinas para dedicar más esfuerzos al fútbol o el baloncesto.
         </p>
@@ -105,7 +107,7 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-      </section>
+      </main>
     
  <section class="historia2 container">
     <p>Es uno de los clubes de fútbol con más seguidores del planeta, además de tener más de 85.000 socios, y uno de los más laureados, entre sus palmareses tiene a nivel doméstico treinta y cinco campeonatos de liga, diecisiete copas del Rey y ocho supercopas - haciéndolo el conjunto más ganador de su país - y a nivel internacional catorce UEFA Champions League, dos copas de la UEFA, tres supercopas europea y tres copas Intercontinentales. En su sección de baloncesto es el club con más títulos nacionales de España y más campeonatos internacionales de Europa. Fue un miembro fundador del ya desaparecido G-14, grupo al cual pertenecían los clubes más importantes de Europa.</p>
