--- a/pages/Noticias.html
+++ b/pages/Noticias.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Noticias-Real Madrid Fan Page</title>
+    <meta name="keywords" content="noticias, equipo, realmadrid, futbol, actualidad, liga, champions, uefa, futbol, madrid">
+    <meta name="description" content="Noticias y novedades del dia a dia del equipo, actualizacion de la plantilla, como preparan los partidos y resultados de los mismos. ">
     <link rel="shortcut icon" href="../img/escudo 1.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&family=Kanit:ital@0;1&family=Montserrat&family=Nunito:ital,wght@1,300&display=swap" rel="stylesheet">
    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-   
     <link rel="stylesheet" href="../css/styles.css">
+    <title>Noticias-Real Madrid Fan Page</title>
 </head>
 <body>
     <header>
@@ -61,7 +62,7 @@
     
 
     <h3>Noticias</h3>
-    <section class="noticias container">
+    <main class="noticias container">
     <h4>Benzema se ganó el Golden Globe Soccer del 2022</h4>
     <p>El delantero lideró al Real Madrid campeón de Champions, Liga, Supercopa de Europa y Supercopa de España.
         Karim Benzema recibió un nuevo reconocimiento a su espectacular 2022 en los Premios Globe Soccer, donde ha sido elegido mejor jugador del año. El capitán del Real Madrid, ganador del Balón de Oro y del Premio al Jugador del Año de la UEFA, lideró al equipo en la conquista de la Decimocuarta, la 35ª Liga, la 12ª Supercopa de España y la 5ª Supercopa de Europa.
@@ -81,7 +82,7 @@
             Segundo del Grupo A, igualado a 15 puntos con el Nápoles, el conjunto dirigido por Jurgen Klopp llega a octavos de final tras lograr un pleno de triunfos en su estadio y solo ceder fuera de casa frente al equipo italiano. Salah, con 7 dianas, es uno de los máximos goleadores de esta Champions. Real Madrid y Liverpool se han enfrentado en nueve ocasiones en la Copa de Europa, con un balance de cinco victorias madridistas, un empate y tres derrotas. El último precedente fue la final de la Decimocuarta.
             </p>
         <img src="../img/noticias-3.jpg" alt="noticias-3">
-    </section>
+    </main>
     <footer class="footer-general">
 
         <h2 class="footer__h2">Donde encontrarnos</h2>
