ajuste de footer e index

--- a/index.html
+++ b/index.html
@@ -111,50 +111,50 @@
           </div>
           </div>
           <div class="carousel-item">
-            <img src="img/MILITAO_3.png" class="d-block w-100" alt="...">
+            <img src="img/MILITAO_3.png" class="d-block w-100" alt="MILITAO">
             <div class="carousel-caption d-none d-md-block">
                 <h4>E.MILITAO</h4>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/ALABA_4.png" class="d-block w-100" alt="...">
+          <img src="img/ALABA_4.png" class="d-block w-100" alt="ALABA">
           <div class="carousel-caption d-none d-md-block">
               <h4>D.ALABA</h4>
         </div>
       </div>
           <div class="carousel-item">
-            <img src="img/VALLEJO_5.png" class="d-block w-100" alt="...">
+            <img src="img/VALLEJO_5.png" class="d-block w-100" alt="VALLEJO">
             <div class="carousel-caption d-none d-md-block">
                 <h4>J. VALLEJO</h4>
             </div>
             </div>
 
           <div class="carousel-item">
-            <img src="img/NACHO_6.png" class="d-block w-100" alt="...">
+            <img src="img/NACHO_6.png" class="d-block w-100" alt="NACHO">
             <div class="carousel-caption d-none d-md-block">
                 <h4>NACHO</h4>
           </div>
         </div>
           <div class="carousel-item">
-            <img src="img/ODRIOZOLA_16.png" class="d-block w-100" alt="...">
+            <img src="img/ODRIOZOLA_16.png" class="d-block w-100" alt="ODRIOZOLA">
             <div class="carousel-caption d-none d-md-block">
                 <h4>A. ODRIOZOLA</h4>
           </div>
         </div>
           <div class="carousel-item">
-            <img src="img/LUCAS_17.png" class="d-block w-100" alt="...">
+            <img src="img/LUCAS_17.png" class="d-block w-100" alt="VASQUEZ">
             <div class="carousel-caption d-none d-md-block">
                 <h4>L. VASQUEZ</h4>
           </div>
         </div>
           <div class="carousel-item">
-            <img src="img/RUDIGER_22.png" class="d-block w-100" alt="...">
+            <img src="img/RUDIGER_22.png" class="d-block w-100" alt="RUDIGER">
             <div class="carousel-caption d-none d-md-block">
                 <h4>M. RUDIGER</h4>
           </div>
         </div>
           <div class="carousel-item">
-            <img src="img/MENDY_23.png" class="d-block w-100" alt="...">
+            <img src="img/MENDY_23.png" class="d-block w-100" alt="MENDY">
             <div class="carousel-caption d-none d-md-block">
                 <h4>F.MENDY</h4>
           </div>
@@ -187,38 +187,38 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/KROOS_8.png" class="d-block w-100" alt="COURTOIS">
+            <img src="img/KROOS_8.png" class="d-block w-100" alt="KROOS">
             <div class="carousel-caption d-none d-md-block">
                 <h4>T.KROOS"</h4>
            </div>
           </div>
           <div class="carousel-item">
-            <img src="img/MODRIC_10.png" class="d-block w-100" alt="CARVAJAL">
-            <div class="carousel-caption d-none d-md-block">
+            <img src="img/MODRIC_10.png" class="d-block w-100" alt="MODRIC">
+          <div class="carousel-caption d-none d-md-block">
                 <h4>L.MODRIC</h4>
           </div>
           </div>
           <div class="carousel-item">
-            <img src="img/CAMAVINGA_12.png" class="d-block w-100" alt="...">
+            <img src="img/CAMAVINGA_12.png" class="d-block w-100" alt="CAMAVINGA">
             <div class="carousel-caption d-none d-md-block">
                 <h4>E.CAMAVINGA</h4>
           </div>
         </div>
           <div class="carousel-item">
-            <img src="img/VALVERDE_15.png" class="d-block w-100" alt="...">
+            <img src="img/VALVERDE_15.png" class="d-block w-100" alt="VALVERDE">
             <div class="carousel-caption d-none d-md-block">
                 <h4>F.VALVERDE</h4>
             </div>
             </div>
 
           <div class="carousel-item">
-            <img src="img/TCHOUAMENI_18.png" class="d-block w-100" alt="...">
+            <img src="img/TCHOUAMENI_18.png" class="d-block w-100" alt="TCHOUAMENI">
             <div class="carousel-caption d-none d-md-block">
                 <h4>A.TCHOUAMENI</h4>
           </div>
         </div>
           <div class="carousel-item">
-            <img src="img/CEBALLOS_19.png" class="d-block w-100" alt="...">
+            <img src="img/CEBALLOS_19.png" class="d-block w-100" alt="CEBALLOS">
             <div class="carousel-caption d-none d-md-block">
                 <h4>D.CEBALLOS</h4>
           </div>
@@ -251,32 +251,32 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/HAZARD_7.png" class="d-block w-100" alt="COURTOIS">
+                <img src="img/HAZARD_7.png" class="d-block w-100" alt="HAZARD">
                 <div class="carousel-caption d-none d-md-block">
                     <h4>E.HAZARD</h4>
                </div>
               </div>
               <div class="carousel-item">
-                <img src="img/BENZEMA_9.png" class="d-block w-100" alt="CARVAJAL">
+                <img src="img/BENZEMA_9.png" class="d-block w-100" alt="BENZEMA">
                 <div class="carousel-caption d-none d-md-block">
                     <h4>K.BENZEMA</h4>
               </div>
               </div>
               <div class="carousel-item">
-                <img src="img/ASENSIO_11.png" class="d-block w-100" alt="...">
+                <img src="img/ASENSIO_11.png" class="d-block w-100" alt=ASENSIO>
                 <div class="carousel-caption d-none d-md-block">
                     <h4>M.ASENSIO</h4>
               </div>
             </div>
               <div class="carousel-item">
-                <img src="img/VINICIUS_20.png" class="d-block w-100" alt="...">
+                <img src="img/VINICIUS_20.png" class="d-block w-100" alt="VINICIUS">
                 <div class="carousel-caption d-none d-md-block">
                     <h4>VINICIUS JR</h4>
                 </div>
                 </div>
     
               <div class="carousel-item">
-                <img src="img/RODRYGO_21.png" class="d-block w-100" alt="...">
+                <img src="img/RODRYGO_21.png" class="d-block w-100" alt="RODRYGO">
                 <div class="carousel-caption d-none d-md-block">
                     <h4>RODRYGO</h4>
               </div>
