ajustes de pages

--- a/pages/Proximos-juegos.html
+++ b/pages/Proximos-juegos.html
@@ -60,15 +60,15 @@
     <main class="juegos container">
         <h3>Juegos de liga</h3>
         <div class="juegos__1">
-        <img src="../img/partidos-liga-1.png" alt="liga">
+        <img src="../img/partidos-liga-1.png" alt="partidos de liga">
     
         <h3>Juegos de Champions</h3>
         <div class="juegos__1">
-        <img src="../img/partidos-ch-1.png" alt="">
+        <img src="../img/partidos-ch-1.png" alt="partido de champions">
     </div>
 
-        <h3>Juegos de la Copa</h3>
-         <p>Esperando rival de Octavos de final</p>
+        <h3>Juegos de la Copa del Rey</h3>
+         <img src="../img/partidos-copa-1.png" alt="partido de copa">
   </main>
        
          <footer class="footer-general">
