--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -124,7 +124,7 @@
         
 
     
-<footer>
+<footer class="footer-general">
 
     <h2 class="footer__h2">Donde encontrarnos</h2>
      <div class="footer__1">
