ajustes de pages

--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -88,15 +88,15 @@
         </div>
       
     <p>El primer escudo del Madrid Foot-ball Club tuvo un diseño muy simple. Consistió en entrelazar las tres iniciales del club, es decir, la “M”, la “F” y la “C”, que iban en fondo oscuro azul, sobre la camiseta blanca. Pero a su vez, el reglamento establecía que para partidos con conjuntos de otras sociedades, el equipo debía llevar el escudo de la ciudad de Madrid en el lado izquierdo del pecho, reemplazando al escudo del club.
-        La primera variante data de 1908. Las letras entrelazadas adoptaron una forma más estilizada y aparecieron inscritas en un círculo. El siguiente cambio en la configuración del escudo no se dio hasta 1920, año en el que el rey Alfonso XIII concedió al club el título de Real. Por esta razón se le añadió la Corona Real, las iniciales se vieron estilizadas otro tanto, y el club pasó a denominarse Real Madrid Foot ball Club. A su vez, para los partidos oficiales, se adoptó el escudo de la ciudad junto con la corona borbónica.
+        La primera variante data de 1908. Las letras entrelazadas adoptaron una forma más estilizada y aparecieron inscritas en un círculo.
         </p>
         <div id="carouselExample2" class="carousel slide">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/historia-4.jpg" class="d-block w-100" alt="...">
+              <img src="../img/historia-4.jpg" class="d-block w-100" alt="historia-4">
             </div>
             <div class="carousel-item">
-              <img src="../img/historia-5.jpg" class="d-block w-100" alt="...">
+              <img src="../img/historia-5.jpg" class="d-block w-100" alt="historia-5">
             </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample2" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -116,7 +116,7 @@
     </div>
     <div> 
     <h3>Palmarés de Títulos</h3>
-    <img src="../img/palmares-1.png" alt="">
+    <img src="../img/palmares-1.png" alt="Palmarés-1">
    </div>
 </section>
 
