prueba de subida a github

--- a/pages/Unete.html
+++ b/pages/Unete.html
@@ -60,9 +60,11 @@
             </nav>
          </div>
          </header>
+         <section class="titulo container">
           <h2>Tienda online</h2>
           <p>Productos auténticos diseñados por Adidas con materiales 100% reciclados y tecnología de ventilación HEAT.RDY. Siente la emoción de entrenar con la vestimenta del mejor club del mundo. </p>
-         <section class="tienda">
+        </section>
+          <section class="tienda">
           <section class="card_1">
           <div class="card">
             <img src="../img/tienda-1.webp" class="card-img-top" alt="primera equip">
